+Add Turkish translation (contributed by mustafa)
+Add Italian translation (contributed by Angelo)
+Improved api documentation
+Auto-(un)commenting support for Editra Style Sheets
+Fold Margin styling can be styled separate from rest of buffer
+Add option to set Indent Width separatly from Tab Width
+New bundled syntax highlighting style Dessert (contributed by Greg Allen)

BUG FIXES:
+Misc UI consistancy issues
+Add missing Objective C sample file for highlighting editor
+Add missing ActionScript sample file for highlighting editor
+Using 16x16 size toolbar icons on OSX
+Missing editra.ico file on source installs under Windows
+Handle PyDeadObjectErrors that can happen when one of the network threads
started in the PluginManager returns after the manager has been closed.
+Fix bug in failing to convert file paths to unicode when opening from command
line.
+Improper highlighting of documentation keywords
+Saving maximized state of window on Exit

#-----------------------------------------------------------------------------#

VERSION 0.2.90
DATE 03/15/2008
11th Alpha Release

NEWS:
  This release introduces a number of major new features and improvements 
throughout the editor. The biggest addition is the new bundled CodeBrowser 
plugin for browsing classes, functions, variables and other significant 
elements of a document. In this first release CodeBrowser has support for the 
filetypes (Ada, CSS, ini, batch, ESS, Fortran, Inno Setup Scripts, Lisp, Lua, 
NSIS, Perl, Php, Python, Shell Scripts, Tcl/Tk).

In addition to the CodeBrowser there are new updated versions many other 
plugins. Launch now has added support for (Ada, haXe, Php, and PostScript). 
The Projects plugin now has added support for using the Bazaar source control 
system in addition to some other minor feature additions. Another new version 
of FileBrowser is also shipped with Editra fixing some bugs from the previous 
release.
