@@ -216,6 +216,7 @@ class MainWindow(wx.Frame, viewmgr.PerspectiveManager):
                                      (ID_ZOOM_IN, self.OnUpdateViewUI),
                                      (ID_ZOOM_OUT, self.OnUpdateViewUI),
                                      (ID_GOTO_MBRACE, self.OnUpdateViewUI),
+                                     (ID_HLCARET_LINE, self.OnUpdateViewUI),
                                      (ID_VIEW_TOOL, self.OnUpdateViewUI),
                                      (ID_SHOW_WS, self.OnUpdateViewUI),
                                      (ID_SHOW_EDGE, self.OnUpdateViewUI),
@@ -872,7 +873,7 @@ class MainWindow(wx.Frame, viewmgr.PerspectiveManager):
                          ID_TRIM_WS, ID_SHOW_EDGE, ID_MACRO_START,
                          ID_MACRO_STOP, ID_MACRO_PLAY, ID_TO_LOWER,
                          ID_TO_UPPER, ID_KWHELPER, ID_USE_SOFTTABS,
-                         ID_GOTO_MBRACE
+                         ID_GOTO_MBRACE, ID_HLCARET_LINE
                          ])
         menu_ids.extend(active_only)
 
@@ -993,6 +994,8 @@ class MainWindow(wx.Frame, viewmgr.PerspectiveManager):
             evt.Enable(zoom > -8)
         elif e_id == ID_GOTO_MBRACE:
             evt.Enable(-1 not in ctrl.GetBracePair())
+        elif e_id == ID_HLCARET_LINE:
+            evt.Check(ctrl.GetCaretLineVisible())
         elif e_id == ID_VIEW_TOOL:
             evt.Check(self.GetToolBar().IsShown())
         elif e_id == ID_SHOW_WS:
