@@ -19,6 +19,10 @@ stringeol_style {
 		fore:#FF0000;
 }
 
+caret_line {
+        back: #3F3F3F;
+}
+
 comment_style {
 		fore:#999999;
 }
